--- a/style.css
+++ b/style.css
@@ -133,6 +133,7 @@ header {
 }
 
 .zig-zag-box {
+    border: 1px solid red;
     display: grid;
         grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
     margin: 30px auto;
